cp project/force-app/main/default/objects/KYC_Document__c/KYC_Document__c.object-meta.xml
<CustomObject>
    <description>Channel partner compliance documents and verification tracking</description>
    <label>KYC Document</label>
    <nameField>
        <displayFormat>KYC-{00000}</displayFormat>
        <label>KYC Document ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>KYC Documents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>