cp project/force-app/main/default/objects/KYC_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>PAN</fullName>
                    <default>true</default>
                    <label>PAN</label>
                </value>
                <value>
                    <fullName>GST</fullName>
                </value>
                <value>
                    <fullName>Company Registration</fullName>
                </value>
                <value>
                    <fullName>Address Proof</fullName>
                </value>
                <value>
                    <fullName>Bank Proof</fullName>
                </value>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>RERA Certificate</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>