cp project/force-app/main/default/objects/KYC_Document__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <label>Channel Partner</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipLabel>Channel Partner</relationshipLabel>
    <relationshipName>KYC_Documents</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>